fixed the overflow

--- a/promotional website/public/styles/styles.css
+++ b/promotional website/public/styles/styles.css
@@ -2,7 +2,7 @@ body {
   background-color: #161616;
   font-family: "Metrophobic", sans-serif;
   color: #f1ebeb;
-  overflow-x: hidden;
+  overflow-x:hidden;
 }
 .container{
   width:100%;
@@ -15,6 +15,7 @@ h3 {
   margin: 1rem 0;
   padding: 1rem 0;
 }
+
 /* navbar */
 .navbar {
   font-family: "Metrophobic";
@@ -34,8 +35,9 @@ h3 {
 
 /* Navbar Toggler */
 .custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#ffffff' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 92 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#ffffff' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
   border-radius: 3px;
+  background-color:white;
   color:white;
   padding: 1rem;
   float: left;
@@ -88,9 +90,9 @@ h3 {
 border-radius: 10px;
 outline:none;
 }
-.home-image {
-  width: 400px;
-  height: 600px;
+.home-image .resource-image{
+  margin:auto;
+  padding:2rem;
 }
 .heading-home {
   font-style: normal;
@@ -104,7 +106,7 @@ outline:none;
     0px 5px 10px rgba(84, 220, 242, 0.25);
 }
 .brand-pic {
-  width: 100px;
+  width: 100%;
   height: 80px;
 }
 
@@ -138,10 +140,6 @@ outline:none;
 }
 
 /* resources */
-.resource-image img {
-  margin-left: 100px;
-  margin-top: 50px;
-}
 
 /* stream */
 .stream-heading {
@@ -149,7 +147,7 @@ outline:none;
 }
 .stream-display {
   margin: 1rem;
-  width: 1100px;
+  width: 100%;
   height: 435px;
   background: #5f5d5d;
   border-radius: 15px;
@@ -207,7 +205,7 @@ outline:none;
 }
 /* register form */
 .hr-register {
-  width: 450px;
+  width: 100%;
   margin: 0 0 2rem 0;
   height: 0;
   border: 1px solid #54dcf2;
